# Opencv-Windows

./: .gitattributes  README.md
install/: OpenCVConfig.cmake  setup_vars_opencv4.cmd
install/python/cv2/: config.py
install/x64/mingw/lib/: OpenCVConfig.cmake  OpenCVModules-release.cmake  OpenCVModules.cmake
install/x64/vc16/lib/: OpenCVConfig.cmake  OpenCVModules-debug.cmake  OpenCVModules-release.cmake  OpenCVModules.cmake  opencv_img_hash400.lib  opencv_img_hash400d.lib  opencv_img_hash453.lib  opencv_img_hash453d.lib  opencv_world400.lib  opencv_world400d.lib
opencv_contrib_demo/: CMakeLists.txt  main.cpp
opencv_demo/: CMakeLists.txt  main.cpp
opencv_test/: main.cpp  opencv_test.sln  opencv_test.vcxproj
opencv_test/x64/Debug/: opencv_test.ilk  vc142.idb
opencv_test/x64/Debug/opencv_test.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  opencv_test.lastbuildstate
